--- a/server/java/src/main/resources/static/css/style.css
+++ b/server/java/src/main/resources/static/css/style.css
@@ -30,28 +30,15 @@ img{
 
 }
 
-.screen{
-
-    display: none;
-    width: 100%;
-    height: 100%;
-}
-
-.active{
-
-    display: block;
-    height: 100vh;
-    width: 100%;
-}
-
-#loginScreen.active{
+/*############################LOGIN/register############################*/
+#loginScreen, #registerScreen{
 
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-#login{
+#login,#register{
 
     border: 1px solid black;
 
@@ -67,6 +54,87 @@ img{
     display: block;
     margin: 3px;
 
+}
+
+main .row:first-child{
+
+    margin-top: 0;
+}
+
+/*############################sidebar############################*/
+
+#sidebar{
+
+    height: 100vh;
+    width: 60px;
+    border-right: black 1px solid;
+    padding: 5px;
+    transition: all 300ms;
+}
+
+#sidebar.active{
+
+    width: 130px;
+}
+
+.sidebarElement{
+
+    height: 60px;
+    width: 100%;
+    margin: 5px 0;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.sidebarElement p {
+
+    display: none;
+    transition: all 300ms;
+}
+
+#sidebar.active .sidebarElement p{
+
+    display: inline-block;
+    margin: auto 5px;
+}
+
+.sidebarElement i{
+
+    font-size: 40px;
+
+}
+
+/*############################Screen############################*/
+
+#screen{
+
+    flex-grow: 1;
+    height: 100vh;
+}
+
+.screen{
+
+    display: none;
+}
+
+.screen.active{
+
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    flex-direction: column;
+}
+
+.screen.screenHeading{
+
+    display: flex;
+    width: 100%;
+    text-align: center;
+    justify-content: space-around;
+    align-items: center;
 }
 
 
