--- a/server/java/src/main/resources/static/css/style.css
+++ b/server/java/src/main/resources/static/css/style.css
@@ -1,29 +1,29 @@
-:root{
+:root {
 
     --primary: grey;
-    --secondary:black;
+    --secondary: black;
 
 }
 
-body{
+body {
 
     margin: 0;
     height: 100vh;
 
 }
 
-*{
+* {
 
     box-sizing: border-box;
 
 }
 
-.flex-box{
+.flex-box {
 
     display: flex;
 }
 
-img{
+img {
 
     max-width: 100%;
     max-height: 100%;
@@ -31,39 +31,39 @@ img{
 }
 
 /*############################LOGIN/register############################*/
-#loginScreen, #registerScreen{
+#loginScreen, #registerScreen {
 
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-#login,#register{
+#login, #register {
 
     border: 1px solid black;
 
 }
 
-#login h2{
+#login h2 {
 
     text-align: center;
 }
 
-#email, #password, input[type = "submit"]{
+#email, #password, input[type = "submit"] {
 
     display: block;
     margin: 3px;
 
 }
 
-main .row:first-child{
+main .row:first-child {
 
     margin-top: 0;
 }
 
 /*############################sidebar############################*/
 
-#sidebar{
+#sidebar {
 
     height: 100vh;
     width: 60px;
@@ -72,12 +72,12 @@ main .row:first-child{
     transition: all 300ms;
 }
 
-#sidebar.active{
+#sidebar.active {
 
     width: 130px;
 }
 
-.sidebarElement{
+.sidebarElement {
 
     height: 60px;
     width: 100%;
@@ -95,13 +95,13 @@ main .row:first-child{
     transition: all 300ms;
 }
 
-#sidebar.active .sidebarElement p{
+#sidebar.active .sidebarElement p {
 
     display: inline-block;
     margin: auto 5px;
 }
 
-.sidebarElement i{
+.sidebarElement i {
 
     font-size: 40px;
 
@@ -109,18 +109,18 @@ main .row:first-child{
 
 /*############################Screen############################*/
 
-#screen{
+#screen {
 
     flex-grow: 1;
     height: 100vh;
 }
 
-.screen{
+.screen {
 
     display: none;
 }
 
-.screen.active{
+.screen.active {
 
     display: flex;
     height: 100vh;
@@ -128,13 +128,47 @@ main .row:first-child{
     flex-direction: column;
 }
 
-.screen.screenHeading{
+.screenHeading {
 
-    display: flex;
     width: 100%;
     text-align: center;
     justify-content: space-around;
     align-items: center;
 }
+
+.screenMain {
+
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+    padding: 5%;
+}
+
+/*############################Dispense############################*/
+
+/*############################Schedule############################*/
+
+#calender {
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    border-collapse: collapse;
+}
+
+.weekday {
+
+    width: calc(100% / 3 - (2px * 2));
+    height: calc(100% / 4);
+    padding: 5px;
+    margin: 2px;
+    border: black 1px solid;
+    background-color:hotpink;
+}
+
+
 
 
