Some error handling and when a cookie isn't valid due to a sign in somewhere else it will now be deleted

--- a/server/java/src/main/resources/static/css/style.css
+++ b/server/java/src/main/resources/static/css/style.css
@@ -157,16 +157,23 @@ main .row:first-child {
     display: flex;
     flex-wrap: wrap;
     border-collapse: collapse;
+    justify-content: center;
+    align-items: center;
 }
 
-.weekday {
+.weekday, #scheduleControls {
 
-    width: calc(100% / 3 - (2px * 2));
+    width: calc(100% / 3 - (2px * 6));
     height: calc(100% / 4);
     padding: 5px;
     margin: 2px;
     border: black 1px solid;
     background-color:hotpink;
+}
+
+#scheduleControls{
+
+    width: calc((100% / 3 - (2px * 4)) * 2);
 }
 
 
